# docker_ml

./: .gitignore  README.md  git_push_docker_ml.bat
docker_ml/: .gitignore  .wslconfig  Dockerfile  Dockerfile_for_make_toml  docker_run.sh  pyproject.toml  ※環境構築コマンド履歴.txt
docker_ml/code/: model.py  run_model.sh
docker_ml/code/model/: decisiontree_model.pkl
docker_ml/docker_ml/: .gitignore  poetry2requirements_txt.sh
docker_ml/docker_ml/notebook/: .gitignore  test.ipynb
docker_ml/docker_ml/streamlit_app/: app.py
docker_ml/docker_ml/tests/: model.py  run_model.sh
docker_ml/docker_ml/tests/model/: decisiontree_model.pkl
docker_ml/prepare_poetry/: Dockerfile_poetry  pyproject.toml
