[tool.poetry]
name = "docker-test"
version = "0.1.0"
description = ""
authors = ["hayabusa <hayabusa@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.19.5"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
palmerpenguins = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
