[tool.poetry]
name = "docker-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.19.5"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
palmerpenguins = "^0.1.4"
jupyterlab = "^3.0.16"
jupyter = "^1.0.0"
black = "^21.5b1"
jupyter-contrib-nbextensions = "^0.5.1"
papermill = "^2.3.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
