[tool.poetry]
name = "docker_ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
tqdm = "^4.61.0"
xgboost = "^1.4.2"
lightgbm = "^3.2.1"
torch = "^1.8.1"
optuna = "^2.7.0"
streamlit = "^0.82.0"
nyaggle = "^0.1.4"
jupyterlab = "^3.0.16"
jupyter = "^1.0.0"
black = "^21.5b1"
jupyter-contrib-nbextensions = "^0.5.1"
papermill = "^2.3.3"
mlflow = "^1.17.0"
catboost = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
